[package]
name = "karlo-rs"
version = "1.0.0"
edition = "2021"
authors = ["Seok Won <ikr@kakao.com>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
